--- a/src/components/app/app.html
+++ b/src/components/app/app.html
@@ -1,2 +1,2 @@
 <nav-bar params="route: route"></nav-bar>
-<div id="page" class="container" data-bind="component: { name: route().page, params: route }"></div>
+<div id="page" class="page container" data-bind="component: { name: route().page, params: route }"></div>
