--- a/src/components/page-home/page-home.html
+++ b/src/components/page-home/page-home.html
@@ -1,5 +1,38 @@
 <h2>Home</h2>
-
 <p data-bind='text: message'></p>
-
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
+<p data-bind='text: message'></p>
 <button data-bind='click: doSomething'>Click me</button>
