--- a/src/components/nav-bar/nav-bar.html
+++ b/src/components/nav-bar/nav-bar.html
@@ -1,25 +1,21 @@
-<!--
-  The navigation UI that is docked to the top of the window. Most of this markup simply
-  follows Bootstrap conventions. The only Knockout-specific parts are the data-bind
-  attributes on the <li> elements.
--->
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">yo ko test</a>
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+                <img alt="Brand" src="http://i.imgur.com/KXsDMlU.png">
+            </a>
+        </div>
+        <div class="collapse navbar-collapse">
+
+            <ul class="nav navbar-nav">
+                <li data-bind="css: { active: route().page === 'page-home' }">
+                    <a href="#">Home</a>
+                </li>
+
+                <li data-bind="css: { active: route().page === 'page-ranking' }">
+                    <a href="#ranking">Ranking</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="collapse navbar-collapse">
-
-      <ul class="nav navbar-nav">
-        <li data-bind="css: { active: route().page === 'home-page' }">
-          <a href="#">Home</a>
-        </li>
-
-        <li data-bind="css: { active: route().page === 'about-page' }">
-          <a href="#about">About</a>
-        </li>
-      </ul>
-
-    </div>
-  </div>
 </div>
