--- a/src/components/page-ranking/page-ranking.html
+++ b/src/components/page-ranking/page-ranking.html
@@ -5,9 +5,9 @@
     <thead>
         <tr>
             <th>#</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Username</th>
+            <th data-bind="text: activeLanguageTexts().firstName">First Name</th>
+            <th data-bind="text: activeLanguageTexts().lastName">Last Name</th>
+            <th data-bind="text: activeLanguageTexts().username">Username</th>
         </tr>
     </thead>
     <tbody>
