--- a/src/components/page-home/page-home.html
+++ b/src/components/page-home/page-home.html
@@ -1,38 +1,10 @@
-<h2>Home</h2>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
-<p data-bind='text: message'></p>
+<div class="jumbotron">
+    <h1>Arctum</h1>
+    <p>This is a simple app to show you some cool knockout features.</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
+<div class="row">
+  <card></card>
+</div>
 <p data-bind='text: message'></p>
 <button data-bind='click: doSomething'>Click me</button>
