--- a/src/components/card/card.html
+++ b/src/components/card/card.html
@@ -1,7 +1,7 @@
 <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2">
     <div class="card">
         <!-- ko if: !cardLoading() -->
-        Text
+        <span data-bind="text: activeLanguageTexts().loaded">Loaded!</span>
         <!-- /ko -->
 
         <!-- ko if: cardLoading() -->
