--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,9 +50,18 @@ body {
 }
 
 .card {
-    margin-bottom: 10px;
-    height: 100px;
-    background: #f2f2f2;
-    border-radius: 2px;
-    padding: 5px;
+  height: 100px;
+  margin-bottom: 10px;
+  background: #f2f2f2;
+  border-radius: 2px;
+  padding: 5px;
+}
+
+.card-input{
+  width: 100%;
+}
+
+.card-input-maxlength{
+  color: red;
+  font-size: 11px;
 }
