--- a/src/components/app/app.html
+++ b/src/components/app/app.html
@@ -1,2 +1,2 @@
 <nav-bar params="route: route, activeLanguage: activeLanguage"></nav-bar>
-<div id="page" class="page container" data-bind="component: { name: route().page, params: { route, activeLanguage } }"></div>
+<div id="page" class="page container" data-bind="component: { name: route().page, params: { route: route, activeLanguage: activeLanguage } }"></div>
