--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,6 +54,10 @@ body {
     font-size: 20px;
 }
 
+.dropdown-menu {
+    border-top: initial;
+}
+
 .dropdown-background {
     position: fixed;
     height: 100%;
