--- a/src/components/page-home/page-home.html
+++ b/src/components/page-home/page-home.html
@@ -5,6 +5,6 @@
 </div>
 <div class="row">
     <!-- ko foreach: cards -->
-      <card params="activeLanguage: $parent.activeLanguage"></card>
+      <card params="locale: $parent.locale"></card>
     <!-- /ko -->
 </div>
