--- a/src/components/list-of-cards/list-of-cards.html
+++ b/src/components/list-of-cards/list-of-cards.html
@@ -5,6 +5,8 @@
 </div>
 <div class="row">
     <!-- ko foreach: cards -->
-      <card params="currentLanguage: $parent.currentLanguage, data: $data, parent: $parent"></card>
+    <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2">
+        <card params="data: $data, currentLanguage: $parent.currentLanguage, parent: $parent"></card>
+    </div>
     <!-- /ko -->
 </div>
