--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,11 +86,20 @@ body {
 }
 
 .card {
-    height: 100px;
+    height: 98px;
     margin-bottom: 10px;
     background: #f2f2f2;
     border-radius: 2px;
     padding: 5px;
+}
+
+.btn-card-delete {
+    float: right;
+    margin-top: -5px;
+    margin-right: -5px;
+    border-top-left-radius: initial;
+    border-bottom-left-radius: initial;
+    border-bottom-right-radius: initial;
 }
 
 .card-input {
@@ -148,8 +157,4 @@ body {
     border-color: #337ab7;
     color: #337ab7;
     cursor: default;
-}
-
-.btn-card-delete{
-  float: right;
 }
